Fix line spacing

--- a/source/style.css
+++ b/source/style.css
@@ -367,7 +367,7 @@
 
   /* Style for image content */
   .cdx-simple-image__picture {
-    max-width:calc(70% - 80px)
+    max-width:calc(70% - 80px);
   }
   
   /* Style for the every editor block content */
@@ -380,7 +380,9 @@
     /* Setting the block width to 100% */
      .cdx-block { max-width: 100% !important; }
 
-
+  .cdx-input.cdx-simple-image__caption {
+      line-height: 100%;
+  }
   #editor::-webkit-scrollbar-track {
     background-color: #e4d9d9;
   }
